# standle

./: .eslintrc-auto-import.json  .gitignore  README.md  components.d.ts  components.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  vite.config.ts
src/: App.vue  auto-imports.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/database/migrations/: 0-entries.up.sql
src/assets/: main.postcss
src/components/: bar-chart.vue  entry-card.vue  timer.vue
src/components/ui/: badge.vue  button.vue  input.vue
src/components/ui/accordion/: content.vue  index.ts  item.vue  trigger.vue
src/components/ui/button/: index.ts  index.vue
src/components/ui/dropdown-menu/: checkbox-item.vue  content.vue  index.ts  item.vue  portal.vue  radio-item.vue  shortcut.vue  sub-content.vue  sub-trigger.vue
src/components/ui/select/: content.vue  group.vue  index.ts  item.vue  label.vue  scroll-down-button.vue  scroll-up-button.vue  separator.vue  trigger.vue
src/composables/: entries.ts
src/services/: entry.ts  sqlite.ts
src/utils/: index.ts
